# estim2py

./: .dir-locals.el  .gitignore  CHANGELOG.md  LICENSE  README.md  Readme.md  pyproject.toml
.github/workflows/: static.yml
docs/source/: conf.py  estim2py.rst  modules.rst
src/estim2py/: __init__.py  connection.py  modes.py  simulated.py  status.py
tests/: conftest.py  test_connection.py  test_modes.py  test_simulated.py  test_status.py
