
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "estim2py"
description = "Simple OO based connection to the Estim 2B box over the serial port."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Public Domain"}
authors = [
    {name = "Sissy Becky", email = "sissybecky@gmail.com"}
]
dependencies = [
    "pyserial"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/sissybecky/estim2py"

[tool.hatch.version]
path = "./src/estim2py/__version__.py"

[tool.hatch.envs.default]
env-file = ".env"
dependencies = [
    "pytest",
    "pytest-mock",
    "ruff",
    "sphinx",
    "pyserial"
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
lint = "ruff check ."
docs = [
  "sphinx-apidoc -o docs/source/ src/estim2py",
  "sphinx-build docs/source docs/build"
]
release = [
  "test",
  "hatch build",
  "hatch publish"
]

[tool.hatch.build.targets.wheel]
packages = ["src/estim2py"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(relativeCreated).3f [%(levelname)s] %(message)s"
markers = [
	"hardware: box is plugged in."
]